<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.bcbs239</groupId>
	<artifactId>regtech</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>regtech</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<!-- Project targets preview features in JDK 25; please use JDK 25 to build locally and enable preview features -->
		<java.version>25</java.version>
		<project.version>0.0.1-SNAPSHOT</project.version>
		
		<!-- Version management for common dependencies -->
		<testcontainers.version>1.19.3</testcontainers.version>
		<aws.sdk.version>2.21.29</aws.sdk.version>
		<poi.version>5.2.4</poi.version>
		<!-- Lombok version shared across modules -->
		<lombok.version>1.18.42</lombok.version>
	</properties>
	
	<modules>
		<module>regtech-core</module>
		<module>regtech-iam</module>
		<module>regtech-billing</module>
		<module>regtech-ingestion</module>
		<module>regtech-data-quality</module>
		<module>regtech-risk-calculation</module>
		<module>regtech-report-generation</module>
		<module>regtech-app</module>
	</modules>
	
	<dependencyManagement>
		<dependencies>
			<!-- Testcontainers BOM -->
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${testcontainers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			
			<!-- AWS SDK BOM -->
						<!-- shared dependency versions -->
						<dependency>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
							<scope>provided</scope>
						</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>bom</artifactId>
				<version>${aws.sdk.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- Lombok management (move into main dependencyManagement) -->
	<!-- Lombok version is defined by the ${lombok.version} property above -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<enablePreview>true</enablePreview>
					<parameters>true</parameters>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
